--- a/private/templates/list_base.html
+++ b/private/templates/list_base.html
@@ -9,23 +9,14 @@
       <thead>
         <tr>
         <br>
-          &nbsp;
-          <form action="{% block search_action %} {% endblock %}" method="post" id="searchform">
-            <input type="text" placeholder="Buscar aqu&iacute;..." name="filter" id="filter" title="busqueda">
-          &nbsp;
-
-            <select id="users_state" name="users_state"> &nbsp;
-              <option> Activos </option>
-              <option> Bloqueados </option>
-            </select>
-
-            &nbsp;<button type= "submit" class="btn btn-info"> Buscar <span class="glyphicon glyphicon-search"></span> </button>
-          </form>
+          {% block botones %}
+        {% endblock %}
           &nbsp;
           <form action="{% block new_action %} {% endblock %}" method="post">
             <button type= "submit" class="btn btn-success"> {% block new_action_label %} {% endblock %} <span class="glyphicon glyphicon-plus"></span></button>
           </form>
         </tr>
+      
 
 {% block inner_body %}
 {% endblock %}
