falto un end if del bloque

--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -8,6 +8,7 @@
 {% else %}
   {% block new_action %} ./?action=clinical_history_form_update {% endblock %}
   {% block new_action_label %} Agregar una modificacion {% endblock %}
+{% endif %}
 {% block pagination_action %} ./?action=clinical_history_index {% endblock %}
 {% block body %}
 
