--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -1,6 +1,6 @@
 {% extends 'list_base.html' %}
 
-{% block header %} Listado de Pacientes {% endblock %}
+{% block header %} Historia Clinica {% endblock %}
 
 {% if historial is empty array %}
   {% block new_action %} ./?action=clinical_history_form_new {% endblock %}
@@ -12,18 +12,14 @@
 {% block pagination_action %} ./?action=clinical_history_index {% endblock %}
 {% block body %}
 
-<h1 align="center"> Historia Clinica </h1>
 <div class="container">
   <div class="table-responsive">
-<<<<<<< HEAD
-=======
     <td>
         <form action="./?action=clinical_history_form_update" method="post">
               <input type="submit" class="btn btn-primary" name="id" value="Modificar">
               <input type="hidden" name="id_paciente" id="id_paciente" value= "{{ historial.id_paciente }}">
         </form>
       </td>
->>>>>>> 0dae8319278c9a64b6b4da7d074e8f82dfbb1252
     <table class="table table-condensed">
       <thead>
         <tr>
