encontre un estilo de menu de css, arreglando el front end de reportes

--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,17 +1,19 @@
 {% extends "plantilla_base.html" %}
 
+<link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
+
 {%  block body %}
 
-<form method="POST">
-    <ul style="list-style-type:none">
- {% for each in reports %}
+<div class="vertical-menu">
+	<form method="POST">
+    {% for each in reports %}
       <li>
           <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
           <br>
           <br>
       </li>
-{% endfor %}
-  </ul>
-</form>
+	{% endfor %}
+	</form>
+</div>
 
 {% endblock %}
