--- a/private/templates/plantilla_base.html
+++ b/private/templates/plantilla_base.html
@@ -3,6 +3,7 @@
   <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="../private/css/style.css">
+    <link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
 
     <!--BOOTSTRAP -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
