--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,5 +1,8 @@
 {% extends "plantilla_base.html" %}
 
+{% block head %}
+ <link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
+{% endblock %}
 
 {%  block body %}
 
@@ -7,6 +10,7 @@
 	<form method="POST">
     {% for each in reports %}
       <li>
+
           <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
           <br>
           <br>
