--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -10,8 +10,7 @@
 	<form method="POST">
     {% for each in reports %}
       <li>
-
-          <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
+         <input type="submit" class="active" name="report" value="{{ each }}" id="{{ each }}">
           <br>
           <br>
       </li>
