--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,6 +1,8 @@
 {% extends "plantilla_base.html" %}
 
+{% block style %}
  <link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
+{% endblock %}
 
 {%  block body %}
 
