agregando estilo de menu a reportes_index

--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -6,7 +6,7 @@
 
 {%  block body %}
 
-<div class="vertical-menu">
+<ul class="vertical-menu">
 <form method="POST">
     {% for each in reports %}
       <li>
@@ -17,6 +17,6 @@
 	{% endfor %}
 	
 	</form>
-</div>
+</ul>
 
 {% endblock %}
