--- a/private/templates/demographic_data_report.html
+++ b/private/templates/demographic_data_report.html
@@ -1,12 +1,6 @@
-{% extends "plantilla_base.html" %}
+{% extends "report_base.html" %}
 
-{% block head %}
-<script src="https://code.highcharts.com/highcharts.js"></script>
-{% endblock %}
-
-{%  block body %}
-
-<div id="chart-container" style="width:100%; height:400px;"></div>
+{% block chart %}
 <script>
 $(function () {
   $("#chart-container").highcharts({
@@ -25,6 +19,4 @@ $(function () {
   });
 });
 </script>
-
-
 {% endblock %}
