Se creo una hoja de estilo para list_base, y se arreglo el estilo y la fecha de clinical_history_index

--- a/private/templates/list_base.html
+++ b/private/templates/list_base.html
@@ -1,5 +1,11 @@
 {% extends 'plantilla_base.html' %}
 
+{% block head %}
+<head>
+  <link rel="stylesheet" type="text/css" href="../private/css/list_base.css">
+</head>
+{% endblock %}
+
 {% block body %}
 
 <h1 align="center">{% block header %} {% endblock %}</h1>
@@ -41,12 +47,6 @@
 <br>
 <br>
 <br>
-
-<style>
-  div.table-responsive {
-    background: white;
-  }
-  </style>
 
 {% endblock %}
 
