--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -20,7 +20,7 @@
   <div class="table-responsive">
     <td>
       <br>
-        <form action="./?action=clinical_history_form_update" method="post">
+        <form action="./?action=clinical_history_form_new" method="post">
               &nbsp;<input type="submit" class="btn btn-primary" name="id" value="Agregar historia cl&iacute;nica">
               <input type="hidden" name="id_paciente" id="id_paciente" value= "{{ historial.id_paciente }}">
         </form>
@@ -65,10 +65,16 @@
           <td>{{ item.obs_generales }}</td>
           <td>{{ item.usuario }}</td>
           <td>
-            <form action="./?action=clinical_history_destroy" method="post">
-              <input type="submit" onclick='return confirm("¿Estás seguro?")' class="btn btn-primary" value="Eliminar" id="boton_borrar"/>
-              <input type="hidden" name="id" id="id" value= "{{ item.id }}">
-            </form>
+          <form action="./?action=clinical_history_form_update" method="post">
+            <input type="submit" class="btn btn-primary" value="Modificar">
+            <input type="hidden" name="id" id="id" value= "{{ item.id }}">
+          </form>
+          </td>
+          <td>
+          <form action="./?action=clinical_history_destroy" method="post">
+            <input type="submit" onclick='return confirm("¿Estás seguro?")' class="btn btn-primary" value="Eliminar">
+             <input type="hidden" name="id" id="id" value= "{{ item.id }}">
+          </form>
           </td>
  
         </tr>
