--- a/private/css/reportes_style_menu.css
+++ b/private/css/reportes_style_menu.css
@@ -1,4 +1,3 @@
-<style>
 .vertical-menu {
     width: 200px;
 }
@@ -16,7 +15,6 @@
 }
 
 .vertical-menu a.active {
-    background-color: ##5F9EA0;
+    background-color: #5F9EA0;
     color: white;
 }
-</style>
