--- a/private/templates/clinical_history_form_update.html
+++ b/private/templates/clinical_history_form_update.html
@@ -1,4 +1,4 @@
-{% extends 'plantilla_base.html' %}
+{% extends 'clinical_history_form_base.html' %}
 
 {% block head %}
 <script>
@@ -10,188 +10,54 @@ $(document).ready(function() {
 </script>
 {% endblock %}
 
-{% block body%}
+{%block action%} ./?action=clinical_history_updated {% endblock %}
 
 
-<div id="div-top" align="center">
-<h1> Historia Cl&iacute;nica de {{ clinicalHistory.getFull_Name() }}</h1>
-<form action='./?action=clinical_history_updated'  method='post'>
-  <div class="container">
-    <div class="row">
-      <div align="left">
-        <div class="well well-sm">
-          <div class="form-horizontal">
-            Los campos marcados con <font size= 4 color="#EC2020">* </font> son obligatorios.
-            <br> <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
-                <div class="col-md-8">
-                  <font color="#EC2020" size= 4>* </font> Fecha de la consulta:
-                  <input id="fecha" name="fecha" type="date" value={{ clinicalHistory.fecha|date('Y-m-d') }} class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
-                <div class="col-md-8">
-                  Edad:
-                    <input id="edad" name="edad" type="numeric" value="{{ clinicalHistory.edad }} " class="form-control">
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                 <font color="#EC2020" size= 4>* </font> Peso:
-                    <input id="peso" name="peso" type="numeric" value="{{ clinicalHistory.peso }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  <font color="#EC2020" size= 4>* </font> Vacunas completas?:
-                  <select id="vacunas_completas" name="vacunas_completas" required>
-                    <option value="1">SI</option>
-                    <option value="0">NO</option>
-                  </select>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-             <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                 <font color="#EC2020" size= 4>* </font> Vacunas observaciones:
-                    <input id="vacunas_obs" name="vacunas_obs" type="text" value="{{ clinicalHistory.vacunas_obs }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  <font color="#EC2020" size= 4>* </font> Maduración acorde?:
-                  <select id="maduracion_acorde" name="maduracion_acorde" required>
-                    <option value="1">SI</option>
-                    <option value="0">NO</option>
-                  </select>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                 <font color="#EC2020" size= 4>* </font> Maduración observaciones:
-                    <input id="maduracion_obs" name="maduracion_obs" type="text" value="{{ clinicalHistory.maduracion_obs }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                <font color="#EC2020" size= 4>* </font> Exámen físico normal?:
-                  <select id="examen_fisico" name="examen_fisico" required>
-                    <option value="1">SI</option>
-                    <option value="0">NO</option>
-                  </select>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                 <font color="#EC2020" size= 4>* </font> Exámen físico observaciones:
-                    <input id="examenFisico_obs" name="examenFisico_obs" type="text" value="{{ clinicalHistory.examenFisico_obs }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  PC: percentilo cefálico:
-                    <input id="percentilo_cefalico" name="percentilo_cefalico" type="numeric" value="{{ clinicalHistory.percentilo_cefalico }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  PPC: percentilo perímetro cefálico:
-                    <input id="percentilo_perim_cefalico" name="percentilo_perim_cefalico" type="numeric" value="{{ clinicalHistory.percentilo_perim_cefalico }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  Talla:
-                    <input id="talla" name="talla" type="text0" value="{{ clinicalHistory.talla }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  Alimentación:
-                    <input id="alimentacion" name="alimentacion" type="text" value="{{ clinicalHistory.alimentacion }}" class="form-control" required>
-                </div>
-              </div>
-            </fieldset>
-            <br>
-            <fieldset>
-              <div class="form-group">
-                <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
-                <div class="col-md-8">
-                  Observaciones generales:
-                    <input id="obs_generales" name="obs_generales" type="text" value="{{ clinicalHistory.obs_generales }}" class="form-control">
-                </div>
-              </div>
-            </fieldset>
-
-            <br>
-            <div class="form-group">
-              <div class="col-md-12 text-center">
-                <input type="submit" class="btn btn-primary" value="Confirmar"> 
-                <input type="button" class="btn btn-danger" id= "cancel_button" name="cancel_button" onclick="return cancelar('pacients_index')"; value="Cancelar"></button>
-                <input type="hidden" name="id" id="id" value= "{{ clinicalHistory.id}}">
-                <input type="hidden" name="usuario" id="usuario" value= "{{ session.getUserId}}">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</form>
-
-<br>
-<br>
-<br>
-<br>
+{% block fecha %}
+{{ clinicalHistory.fecha }}
+{% endblock %}
 
 
+{% block edad %}
+{{ clinicalHistory.edad }}
+{% endblock %}
+
+{% block peso %}
+{{ clinicalHistory.peso }}
+{% endblock %}
+
+{% block vacunas_obs %}
+{{ clinicalHistory.vacunas_obs }}
+{% endblock %}
+
+{% block maduracion_obs %}
+{{ clinicalHistory.maduracion_obs }}
+{% endblock %}
+
+{% block examenFisico_obs %}
+{{ clinicalHistory.examenFisico_obs }}
+{% endblock %}
+
+{% block percentilo_cefalico %}
+{{ clinicalHistory.percentilo_cefalico }}
+{% endblock %}
+
+{% block percentilo_perim_cefalico %}
+{{ clinicalHistory.percentilo_perim_cefalico }}
+{% endblock %}
+
+{% block talla %}
+{{ clinicalHistory.talla }}
+{% endblock %}
+
+{% block alimentacion %}
+{{ clinicalHistory.alimentacion }}
+{% endblock %}
+
+{% block obs_generales %}
+{{ clinicalHistory.obs_generales }}
+{% endblock %}
+
+{% block form %}
+ <input type="hidden" name="id" id="id" value= "{{ clinicalHistory.id}}">
 {% endblock %}
