--- a/private/templates/clinical_history_form_new.html
+++ b/private/templates/clinical_history_form_new.html
@@ -4,12 +4,7 @@
 {%block action%} ./?action=clinical_history_added {% endblock %}
 
 {% block fecha %}
-
-{% endblock %}
-
-
-{% block edad %}
-
+{{ "now"|date('Y-m-d') }}
 {% endblock %}
 
 
@@ -55,4 +50,8 @@
 
 {% block obs_generales %}
 
+{% endblock %}
+
+{% block form %}
+ <input type="hidden" name="id_paciente" id="id_paciente" value= "{{ id_paciente }}">
 {% endblock %}
