--- a/private/css/reportes_style_menu.css
+++ b/private/css/reportes_style_menu.css
@@ -2,19 +2,28 @@
     width: 200px;
 }
 
-.vertical-menu a {
+.vertical-menu input {
     background-color: #eee;
     color: black;
-    display: block;
     padding: 12px;
     text-decoration: none;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    width:100%;
 }
-
-.vertical-menu a:hover {
+.vertical-menu li {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    width: 50%;
+}
+.vertical-menu input:hover {
     background-color: #ccc;
 }
 
-.vertical-menu a.active {
+.vertical-menu input.active {
     background-color: #5F9EA0;
-    color: white;
+    color: white; 
+    width:100%;
 }
