--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,22 +1,56 @@
 {% extends "plantilla_base.html" %}
 
 {% block head %}
- <link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
+	{{ parent() }}
+    <style>
+    .vertical-menu {
+    width: 200px;
+	}
+
+	.vertical-menu input {
+    background-color: #eee;
+    color: black;
+    padding: 12px;
+    text-decoration: none;
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    width:100%;
+	}
+   .vertical-menu li {
+    display: table-cell;
+    text-align: center;
+    vertical-align: middle;
+    width: 50%;
+	}
+ 	.vertical-menu input:hover {
+    background-color: #ccc;
+	}
+
+ 	.vertical-menu input.active {
+    background-color: #5F9EA0;
+    color: white; 
+    width:100%;
+}
+
+</style>
 {% endblock %}
 
 {%  block body %}
 
 <div class="vertical-menu">
-<form method="POST">
-    {% for each in reports %}
-      <li>
-         <input type="submit" class="active" name="report" value="{{ each }}" id="{{ each }}">
-          <br>
-          <br>
-      </li>
-	{% endfor %}
+ 	<ul>
+		<form method="POST">
+			 <li>
+			 <input type="submit" class="active" name="report" value="Reportes" id="Reportes">
+    		 {% for each in reports %}
+      		      <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
+			 {% endfor %}
+       		 </li>
+</form>
 
-	</form>
+
+</ul>
 </div>
 
 {% endblock %}
