--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,8 +1,47 @@
-{% extends "plantilla_base.html" %}
+{% extends "report_base.html" %}
 
-{% block head %}
-	{{ parent() }}
-    <style>
+
+{%  block body %}
+
+ <h1 align="center"> <u>Reportes de los pacientes</u> </h1>
+<div class="container">
+   <div style="float:right" id="container" style="width:100%; height:400px;"> </div>
+   <div align="left" class="vertical-menu">
+			<form method="POST">
+		 	  <li>
+			  <input type="submit" class="active" name="report" value="Reportes" id="Reportes">
+    		  {% for each in reports %}
+      		      <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
+			  {% endfor %}
+       		   </li>
+         </form>  
+  </div>
+</div>
+<script type="text/javascript">
+$(function () { 
+    var myChart = Highcharts.chart('container', {
+        chart: {
+            type: 'pie'
+        },
+        title: {
+            text: 'Reportes de Pacientes'
+        },
+        xAxis: {
+         categories: ['Por Obra Social', 'Por Tipo de Agua', 'Por Tipo de Calefaccion', 'Por Tipo de Vivienda', 'Por Tipo de Documento']
+        },
+        series: [{
+        data: [
+                  ['OSECAC',   10],
+                  ['Corriente',      20],                 
+                  ['Gas',    10],
+                  ['Material',     6],
+                  ['DNI',  4]
+               ]}]
+    });
+});
+
+</script>
+<style>
     .vertical-menu {
     width: 200px;
 	}
@@ -34,23 +73,5 @@
 }
 
 </style>
-{% endblock %}
-
-{%  block body %}
-
-<div class="vertical-menu">
- 	<ul>
-		<form method="POST">
-			 <li>
-			 <input type="submit" class="active" name="report" value="Reportes" id="Reportes">
-    		 {% for each in reports %}
-      		      <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
-			 {% endfor %}
-       		 </li>
-</form>
-
-
-</ul>
-</div>
 
 {% endblock %}
