--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -17,7 +17,10 @@
          </form>  
   </div>
 </div>
-<script type="text/javascript">
+
+<!--Aclaro que tuve que dejar el script y el style aca por que no me anda con Twig /*
+<script type="text/javascript"--> 
+<script>
 $(function () { 
     var myChart = Highcharts.chart('container', {
         chart: {
