--- a/private/templates/reports_index.html
+++ b/private/templates/reports_index.html
@@ -1,80 +1,24 @@
-{% extends "report_base.html" %}
+{% extends "plantilla_base.html" %}
 
+{% block head %}
+<link rel="stylesheet" type="text/css" href="../private/css/reportes_style_menu.css">
+{% endblock %}
 
 {%  block body %}
 
- <h1 align="center"> <u>Reportes de los pacientes</u> </h1>
 <div class="container">
-   <div style="float:right" id="container" style="width:100%; height:400px;"> </div>
-   <div align="left" class="vertical-menu">
-			<form method="POST">
-		 	  <li>
-			  <input type="submit" class="active" name="report" value="Reportes" id="Reportes">
-    		  {% for each in reports %}
-      		      <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
-			  {% endfor %}
-       		   </li>
-         </form>  
+  <div align="left" class="vertical-menu">
+      <form method="POST">
+        <ul>
+          <li>
+            <input type="submit" class="active" value="Reportes">
+              {% for each in reports %}
+                <input type="submit" name="report" value="{{ each }}" id="{{ each }}">
+              {% endfor %}
+          </li>
+        </ul>
+      </form>
+    </div>
   </div>
-</div>
-
-<!--Aclaro que tuve que dejar el script y el style aca por que no me anda con Twig /*
-<script type="text/javascript"--> 
-<script>
-$(function () { 
-    var myChart = Highcharts.chart('container', {
-        chart: {
-            type: 'pie'
-        },
-        title: {
-            text: 'Reportes de Pacientes'
-        },
-        xAxis: {
-         categories: ['Por Obra Social', 'Por Tipo de Agua', 'Por Tipo de Calefaccion', 'Por Tipo de Vivienda', 'Por Tipo de Documento']
-        },
-        series: [{
-        data: [
-                  ['OSECAC',   10],
-                  ['Corriente',      20],                 
-                  ['Gas',    10],
-                  ['Material',     6],
-                  ['DNI',  4]
-               ]}]
-    });
-});
-
-</script>
-<style>
-    .vertical-menu {
-    width: 200px;
-	}
-
-	.vertical-menu input {
-    background-color: #eee;
-    color: black;
-    padding: 12px;
-    text-decoration: none;
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    width:100%;
-	}
-   .vertical-menu li {
-    display: table-cell;
-    text-align: center;
-    vertical-align: middle;
-    width: 50%;
-	}
- 	.vertical-menu input:hover {
-    background-color: #ccc;
-	}
-
- 	.vertical-menu input.active {
-    background-color: #5F9EA0;
-    color: white; 
-    width:100%;
-}
-
-</style>
 
 {% endblock %}
