--- a/private/templates/clinical_history_form_base.html
+++ b/private/templates/clinical_history_form_base.html
@@ -18,7 +18,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-user bigicon"></i></span>
                 <div class="col-md-8">
                   <font color="#EC2020" size= 4>* </font> Fecha de la consulta:
-                  <input id="fecha" name="fecha" type="date" value={% block fecha %} {% endblock %} class="form-control" required>
+                  <input id="fecha" name="fecha" class="form-control" type="date" value={% block fecha %} {% endblock %} required>
                 </div>
               </div>
             </fieldset>
@@ -28,7 +28,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                  <font color="#EC2020" size= 4>* </font> Peso:
-                    <input id="peso" name="peso" type="number" value={% block peso %} {% endblock %} class="form-control" required>
+                    <input id="peso" name="peso" class="form-control" type="number" value={% block peso %} {% endblock %}  required>
                 </div>
               </div>
             </fieldset>
@@ -107,7 +107,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   PC: percentilo cefálico:
-                    <input id="percentilo_cefalico" name="percentilo_cefalico" type="number" value={% block percentilo_cefalico %} {% endblock %} class="form-control">
+                    <input id="percentilo_cefalico"  class="form-control" name="percentilo_cefalico" type="number" value={% block percentilo_cefalico %} {% endblock %} >
                 </div>
               </div>
             </fieldset>
@@ -117,7 +117,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   PPC: percentilo perímetro cefálico:
-                    <input id="percentilo_perim_cefalico" name="percentilo_perim_cefalico" type="number" value={% block percentilo_perim_cefalico %} {% endblock %} class="form-control">
+                    <input id="percentilo_perim_cefalico" class="form-control" name="percentilo_perim_cefalico" type="number" value={% block percentilo_perim_cefalico %} {% endblock %} >
                 </div>
               </div>
             </fieldset>
@@ -127,7 +127,7 @@
                 <span class="col-md-1 col-md-offset-2 text-left"><i class="fa fa-envelope-o bigicon"></i></span>
                 <div class="col-md-8">
                   Talla:
-                    <input id="talla" name="talla" type="number" value={% block talla %} {% endblock %} class="form-control">
+                    <input id="talla" name="talla" type="number" class="form-control" value={% block talla %} {% endblock %} >
                 </div>
               </div>
             </fieldset>
