--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -8,7 +8,7 @@
 
 {% block botones %}
 <form method="POST" action ="./?action=weigth_growth_report">
-  <button type= "submit" class="btn btn-primary">Curva de creimiento</button>
+  <button type= "submit" class="btn btn-primary">Curva de crecimiento</button>
   <input type="hidden" id="id_paciente" name="id_paciente" value=" {{ id_paciente }} ">
 </form> &nbsp;
 <form method="POST" action ="./?action=tall_growth_report">
@@ -40,6 +40,7 @@
           <th>Alimentación: </th>
           <th>Observaciones generales: </th>
           <th>Usuario</th>
+          <th>
         </tr>
       </thead>
 
