cambio intval por floatval

--- a/private/templates/clinical_history_index.html
+++ b/private/templates/clinical_history_index.html
@@ -22,6 +22,7 @@
 {% endblock %}
 
 {% block inner_body %}
+<div class =".container-fluid ">
     <table class="table table-condensed">
       <thead>
         <tr>
