--- a/private/templates/report_base.html
+++ b/private/templates/report_base.html
@@ -3,6 +3,7 @@
 {% block head %}
 <script src="https://code.highcharts.com/highcharts.js"></script>
 <script src="http://code.highcharts.com/modules/exporting.js"></script>
+<script src="https://code.highcharts.com/modules/offline-exporting.js"></script>
 {% endblock %}
 
 {%  block body %}
