--- a/private/templates/pacients_index.html
+++ b/private/templates/pacients_index.html
@@ -40,11 +40,11 @@
           <td>{{ item.last_name }}</td>
           <td>{{ item.birth_date|date('Y-m-d') }}</td>
           <td>{{ item.gender }}</td>
-          <td>{{ referenceData.getDocumentTypeById(item.doc_type).description }}</td>
+          <td>{{ item.doc_type.description }}</td>
           <td>{{ item.dni }}</td>
           <td>{{ item.address }}</td>
           <td>{{ item.phone }}</td>
-          <td>{{ referenceData.getSocialInsuranceById(item.id_medical_insurance).description }}</td>
+          <td>{{ item.medical_insurance.description }}</td>
           <td>
             <form action="./?action=pacient_form_update" method="post">
               <input type="submit" class="btn btn-primary" name="id" value="Modificar">
