--- a/private/templates/pacient_demographic_data.html
+++ b/private/templates/pacient_demographic_data.html
@@ -37,9 +37,9 @@
         {% elseif pacient.electricity == 0%}
           <td> NO </td>
         {% endif %}
-    <td>{{ referenceData.getHeatingTypeById(pacient.heating_type).description }}</td>
-    <td>{{ referenceData.getHomeTypeById(pacient.home_type).description }}</td>
-    <td>{{ referenceData.getWaterTypeById(pacient.water_type).description }}</td>
+    <td>{{ pacient.heating_Type.description }}</td>
+    <td>{{ pacient.home_Type.description }}</td>
+    <td>{{ pacient.water_Type.description }}</td>
     <td>
       <form action="./?action=pacient_form_update" method="post">
         <input type="submit" class="btn btn-primary" name="id" value="Modificar">
